package im.tox.tox4j.av.proto;

option optimize_for = LITE_RUNTIME;


message Call {
  required int32  friendNumber     = 1;
  required bool   audioEnabled     = 2;
  required bool   videoEnabled     = 3;
}

message CallControl {
  enum Kind {
    RESUME        = 0;
    PAUSE         = 1;
    CANCEL        = 2;
    MUTE_AUDIO    = 3;
    UNMUTE_AUDIO  = 4;
    HIDE_VIDEO    = 5;
    SHOW_VIDEO    = 6;
  }

  required uint32  friendNumber     = 1;
  required Kind    control          = 2;
}

message CallState {
  enum Kind {
    ERROR        = 0;
    FINISHED     = 1;
    SENDING_A    = 2;
    SENDING_V    = 3;
    RECEIVING_A  = 4;
    RECEIVING_V  = 5;
  }

  required uint32  friendNumber     = 1;
  repeated Kind    state            = 2;
}

message AudioBitRateStatus {
  required uint32  friendNumber     = 1;
  required bool    stable           = 2;
  required uint32  bitRate          = 3;
}

message VideoBitRateStatus {
  required uint32  friendNumber     = 1;
  required bool    stable           = 2;
  required uint32  bitRate          = 3;
}

message AudioReceiveFrame {
  required uint32  friendNumber     = 1;
  repeated int32   pcm              = 2 [packed = true];
  required uint32  channels         = 3;
  required uint32  samplingRate     = 4;
}

message VideoReceiveFrame {
  required uint32  friendNumber     =  1;
  required uint32  width            =  2;
  required uint32  height           =  3;
  required bytes   y                =  4;
  required bytes   u                =  5;
  required bytes   v                =  6;
  optional bytes   a                =  7;
  required int32   yStride          =  8;
  required int32   uStride          =  9;
  required int32   vStride          = 10;
  required int32   aStride          = 11;
}


message AvEvents {
  repeated Call                   call                = 1;
  repeated CallControl            callControl         = 2;
  repeated CallState              callState           = 3;
  repeated AudioBitRateStatus     audioBitRateStatus  = 4;
  repeated VideoBitRateStatus     videoBitRateStatus  = 5;
  repeated AudioReceiveFrame      audioReceiveFrame   = 6;
  repeated VideoReceiveFrame      videoReceiveFrame   = 7;
}
